Fixed cols in signage not responsive by not setting minimum height instead of static one

--- a/servicespages/signage/signage.css
+++ b/servicespages/signage/signage.css
@@ -38,7 +38,7 @@
     text-align: center;
     padding-top: 15vh;
     background-color: whitesmoke;
-    height: 80vh;
+    min-height: 80vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -66,6 +66,7 @@
     align-items: center;
     padding: 10px 20px;
     width: 31vw;
+    min-height: 50vh;
     border-radius: 3px;
 }
 
